[gd_scene load_steps=4 format=3 uid="uid://b2057q7y58ojk"]

[ext_resource type="Script" path="res://CalculatorFunc.gd" id="1_qwakl"]

[sub_resource type="Theme" id="Theme_5f2ko"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_vg2wm"]
default_font_size = 30

[node name="CalculatorFunc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwakl")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -93.0
offset_top = 7.0
offset_right = 366.0
offset_bottom = 111.0
theme = SubResource("Theme_5f2ko")
text = "Number 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -83.0
offset_top = 157.0
offset_right = 376.0
offset_bottom = 261.0
theme = SubResource("Theme_5f2ko")
text = "Operation:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = -90.0
offset_top = 288.0
offset_right = 369.0
offset_bottom = 392.0
theme = SubResource("Theme_5f2ko")
text = "Number 2:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = -90.0
offset_top = 438.0
offset_right = 369.0
offset_bottom = 542.0
theme = SubResource("Theme_5f2ko")
text = "Result:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 157.0
offset_right = 514.0
offset_bottom = 263.0
theme = SubResource("Theme_5f2ko")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 212.0
offset_top = 440.0
offset_right = 483.0
offset_bottom = 546.0
theme = SubResource("Theme_5f2ko")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 542.0
offset_top = 26.0
offset_right = 695.0
offset_bottom = 144.0
theme = SubResource("Theme_vg2wm")
text = "+"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 747.0
offset_top = 26.0
offset_right = 900.0
offset_bottom = 144.0
theme = SubResource("Theme_vg2wm")
text = "-"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 949.0
offset_top = 28.0
offset_right = 1102.0
offset_bottom = 146.0
theme = SubResource("Theme_vg2wm")
text = "*"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 542.0
offset_top = 183.0
offset_right = 695.0
offset_bottom = 301.0
theme = SubResource("Theme_vg2wm")
text = "**"

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 749.0
offset_top = 181.0
offset_right = 902.0
offset_bottom = 299.0
theme = SubResource("Theme_vg2wm")
text = "/"

[node name="Button6" type="Button" parent="."]
layout_mode = 0
offset_left = 951.0
offset_top = 188.0
offset_right = 1104.0
offset_bottom = 306.0
theme = SubResource("Theme_vg2wm")
text = "MOD"

[node name="Button7" type="Button" parent="."]
layout_mode = 0
offset_left = 606.0
offset_top = 343.0
offset_right = 1011.0
offset_bottom = 475.0
theme = SubResource("Theme_vg2wm")
text = "Clear"

[node name="Button8" type="Button" parent="."]
layout_mode = 0
offset_left = 611.0
offset_top = 490.0
offset_right = 1016.0
offset_bottom = 622.0
theme = SubResource("Theme_vg2wm")
text = "Exit"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 21.0
offset_right = 498.0
offset_bottom = 119.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 292.0
offset_right = 508.0
offset_bottom = 390.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
